--- a/static/index.html
+++ b/static/index.html
@@ -4,38 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ゆっくりしていってね！！！</title>
-    <!-- Include Dropzone CSS -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://wrigglebug.xyz/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://wrigglebug.xyz/img/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        #pageContainer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        #uploadContainer {
-            text-align: center;
-            padding: 20px;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 <body>
 <div id="pageContainer">
     <div id="uploadContainer">
+        <p class="description">
+            Max Filesize is 2GiB
+        </p>
+        <p class="description">
+            There is no guarantee that your files will be hosted forever.
+        </p>
         <!-- Dropzone Form -->
-        <form action="/upload" class="dropzone" id="myDropzone"></form>
+        <form action="/files/upload" class="dropzone" id="myDropzone"></form>
         <div id="response"></div>
     </div>
 </div>
